--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Ross Todd <rssmtdd@gmail.com>",
   "dependencies": {
+    "bulma": "^0.7.4",
     "eslint-config-airbnb": "^17.1.0",
     "gatsby": "^2.1.23",
     "gatsby-image": "^2.0.31",
@@ -20,7 +21,8 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-testing-library": "^6.0.0",
-    "watchman": "^1.0.0"
+    "watchman": "^1.0.0",
+    "yarn": "^1.15.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
