--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Ross Todd <rssmtdd@gmail.com>",
   "dependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "bulma": "^0.7.4",
     "eslint-config-airbnb": "^17.1.0",
     "gatsby": "^2.1.23",
