--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Ross Todd <rssmtdd@gmail.com>",
   "dependencies": {
+    "@babel/runtime": "^7.4.4",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "bulma": "^0.7.4",
@@ -23,12 +26,14 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-testing-library": "^6.0.0",
+    "regenerator": "^0.14.1",
     "watchman": "^1.0.0",
     "yarn": "^1.15.2"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "babel-jest": "^24.5.0",
     "babel-preset-gatsby": "^0.1.8",
     "enzyme": "^3.9.0",
